compiler/tests/golden/suggestions/alignment.txt
error: type mismatch: expected `ChEBIDrug` (chebi:drug), found `DrugBankDrug` (drugbank:drug): no alignment found between chebi:drug and drugbank:drug (different ontologies require explicit align declaration)
  --> /tmp/sounio_test_XXXX/align_suggest.dm:14:13
   |
 14 |     analyze(db);  // Should suggest declaring alignment
   |              ^

Error:   × Type errors:
  │ type mismatch: expected `ChEBIDrug` (chebi:drug), found `DrugBankDrug`
  │ (drugbank:drug): no alignment found between chebi:drug and drugbank:drug
  │ (different ontologies require explicit align declaration)